--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql-connector}</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.2</version>
+    </dependency>
   </dependencies>
 
 
